Removed unlimited button, fixed button spacing and changed headline to make it more user accessible

--- a/src/sass/global/_button.sass
+++ b/src/sass/global/_button.sass
@@ -39,6 +39,7 @@ button,
   &.stripe-btn
     display: block
     margin: 0 auto
+    margin-top: 1em
     padding: 1em
 
 .btn-lite
